# millenium-falcon-challenge

./: .copier-answers.yml  .env  .gitignore  .gitpod.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFERENCE.md  duties.py  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
config/: .safety-policy.yml  coverage.ini  pytest.ini  ruff.toml
dbs/: placeholder.db
docs/: description.md  reference.md  structure.md
scripts/: gen_credits.py  gen_ref_nav.py
src/falcon/: __init__.py  __main__.py  adapter.py  api.py  cli.py  config.py  core.py  db.py  debug.py  frontend.py  models.py  path_service.py  store.py
tests/: __init__.py  conftest.py  test_adapter.py  test_api.py  test_cli.py  test_config.py  test_core.py  test_functional.py
tests/fixtures/: config-no_db.json  empire.json
